// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exports with custom +html.js wrapper 1`] = `
"<!DOCTYPE html><html  lang="en"><head><title data-rh="true"></title><meta charSet="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="custom-value" content="value"/><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1.00001,viewport-fit=cover"/><style id="expo-reset">#root,body{display:flex}#root,body,html{width:100%;-webkit-overflow-scrolling:touch;margin:0;padding:0;min-height:100%}#root{flex-shrink:0;flex-basis:auto;flex-grow:1;flex:1}html{scroll-behavior:smooth;-webkit-text-size-adjust:100%;height:calc(100% + env(safe-area-inset-top))}body{overflow-y:auto;overscroll-behavior-y:none;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;-ms-overflow-style:scrollbar}</style><style id="react-native-stylesheet">[stylesheet-group="0"]{}
body{margin:0;}
button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:rgba(0,0,0,0);}
input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-webkit-search-results-button,input::-webkit-search-results-decoration{display:none;}
[stylesheet-group="1"]{}
.css-11aywtz{-moz-appearance:textfield;-webkit-appearance:none;background-color:rgba(0,0,0,0.00);border-bottom-left-radius:0px;border-bottom-right-radius:0px;border-top-left-radius:0px;border-top-right-radius:0px;border:0 solid black;box-sizing:border-box;font:14px -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;margin:0px;padding:0px;resize:none;}
.css-146c3p1{background-color:rgba(0,0,0,0.00);border:0 solid black;box-sizing:border-box;color:rgba(0,0,0,1.00);display:inline;font:14px -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;list-style:none;margin:0px;padding:0px;position:relative;text-align:start;text-decoration:none;white-space:pre-wrap;word-wrap:break-word;}
.css-175oi2r{align-items:stretch;background-color:rgba(0,0,0,0.00);border:0 solid black;box-sizing:border-box;display:flex;flex-basis:auto;flex-direction:column;flex-shrink:0;list-style:none;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;text-decoration:none;z-index:0;}
.css-1jxf684{background-color:rgba(0,0,0,0.00);border:0 solid black;box-sizing:border-box;color:inherit;display:inline;font:inherit;list-style:none;margin:0px;padding:0px;position:relative;text-align:inherit;text-decoration:none;white-space:inherit;word-wrap:break-word;}
.css-9pa8cd{bottom:0px;height:100%;left:0px;opacity:0;position:absolute;right:0px;top:0px;width:100%;z-index:-1;}
[stylesheet-group="2"]{}
.r-11mg6pl{border-bottom-color:rgba(255,255,255,1.00);border-left-color:rgba(255,255,255,1.00);border-right-color:rgba(255,255,255,1.00);border-top-color:rgba(255,255,255,1.00);}
.r-13awgt0{flex:1;}
.r-1a976y8{border-bottom-left-radius:19px;border-bottom-right-radius:19px;border-top-left-radius:19px;border-top-right-radius:19px;}
.r-1awa8pu{border-bottom-color:rgba(101,119,134,1.00);border-left-color:rgba(101,119,134,1.00);border-right-color:rgba(101,119,134,1.00);border-top-color:rgba(101,119,134,1.00);}
.r-1bq2mok{margin:3px;}
.r-1d4xg89{border-bottom-color:rgba(170,184,194,1.00);border-left-color:rgba(170,184,194,1.00);border-right-color:rgba(170,184,194,1.00);border-top-color:rgba(170,184,194,1.00);}
.r-1f0042m{border-bottom-left-radius:5px;border-bottom-right-radius:5px;border-top-left-radius:5px;border-top-right-radius:5px;}
.r-1j16mh1{border-bottom-left-radius:100%;border-bottom-right-radius:100%;border-top-left-radius:100%;border-top-right-radius:100%;}
.r-1jkafct{border-bottom-left-radius:2px;border-bottom-right-radius:2px;border-top-left-radius:2px;border-top-right-radius:2px;}
.r-1jyn79y{border-bottom-color:rgba(0,150,136,1.00);border-left-color:rgba(0,150,136,1.00);border-right-color:rgba(0,150,136,1.00);border-top-color:rgba(0,150,136,1.00);}
.r-1phboty{border-bottom-style:solid;border-left-style:solid;border-right-style:solid;border-top-style:solid;}
.r-1q9bdsx{border-bottom-left-radius:12px;border-bottom-right-radius:12px;border-top-left-radius:12px;border-top-right-radius:12px;}
.r-1rvyss1{border-bottom-color:rgba(255,255,255,0.20);border-left-color:rgba(255,255,255,0.20);border-right-color:rgba(255,255,255,0.20);border-top-color:rgba(255,255,255,0.20);}
.r-1udh08x{overflow-x:hidden;overflow-y:hidden;}
.r-4a18lf{border-bottom-color:rgba(255,0,0,1.00);border-left-color:rgba(255,0,0,1.00);border-right-color:rgba(255,0,0,1.00);border-top-color:rgba(255,0,0,1.00);}
.r-60ke3l{border-bottom-color:rgba(0,128,0,1.00);border-left-color:rgba(0,128,0,1.00);border-right-color:rgba(0,128,0,1.00);border-top-color:rgba(0,128,0,1.00);}
.r-6koalj{display:flex;}
.r-9x6qib{border-bottom-color:rgba(204,214,221,1.00);border-left-color:rgba(204,214,221,1.00);border-right-color:rgba(204,214,221,1.00);border-top-color:rgba(204,214,221,1.00);}
.r-crgep1{margin:0px;}
.r-d045u9{border-bottom-width:2px;border-left-width:2px;border-right-width:2px;border-top-width:2px;}
.r-d23pfw{padding:24px;}
.r-edyy15{padding:8px;}
.r-fx7oqy{border-bottom-color:rgba(0,0,255,1.00);border-left-color:rgba(0,0,255,1.00);border-right-color:rgba(0,0,255,1.00);border-top-color:rgba(0,0,255,1.00);}
.r-krxsd3{display:-webkit-box;}
.r-kshhro{border-bottom-color:rgba(50,50,50,1.00);border-left-color:rgba(50,50,50,1.00);border-right-color:rgba(50,50,50,1.00);border-top-color:rgba(50,50,50,1.00);}
.r-rs99b7{border-bottom-width:1px;border-left-width:1px;border-right-width:1px;border-top-width:1px;}
.r-t60dpp{padding:0px;}
.r-xoduu5{display:inline-flex;}
.r-ywje51{margin:auto;}
.r-z2wwpe{border-bottom-left-radius:4px;border-bottom-right-radius:4px;border-top-left-radius:4px;border-top-right-radius:4px;}
[stylesheet-group="2.1"]{}
.r-11f147o{padding-bottom:8px;padding-top:8px;}
.r-184id4b{margin-bottom:12px;margin-top:12px;}
.r-1mmae3n{padding-bottom:12px;padding-top:12px;}
.r-1ntr0p{padding-left:5px;padding-right:5px;}
.r-1ubuhtd{padding-left:10px;padding-right:10px;}
.r-1xpp3t0{margin-left:16px;margin-right:16px;}
.r-3o4zer{padding-left:12px;padding-right:12px;}
.r-cnw61z{padding-bottom:4px;padding-top:4px;}
.r-cxgwc0{padding-left:24px;padding-right:24px;}
.r-f8sm7e{margin-left:auto;margin-right:auto;}
.r-is05cd{padding-left:8px;padding-right:8px;}
.r-jdiy1a{margin-left:11px;margin-right:11px;}
.r-lcslpx{margin-left:10px;margin-right:10px;}
.r-n5f61p{margin-bottom:3px;margin-top:3px;}
.r-n7gxbd{padding-left:4px;padding-right:4px;}
.r-rehuqn{padding-bottom:5px;padding-top:5px;}
.r-t15j4v{padding-left:27px;padding-right:27px;}
.r-ubg91z{padding-left:15px;padding-right:15px;}
.r-w7s2jr{padding-bottom:16px;padding-top:16px;}
.r-ytbthy{padding-bottom:10px;padding-top:10px;}
[stylesheet-group="2.2"]{}
.r-10s2tm5{left:0%;}
.r-16o8guy{right:100%;}
.r-1ez5h0i{margin-left:4px;}
.r-1gs4q39{margin-right:4px;}
.r-dqe1q{right:0%;}
.r-rci37q{left:100%;}
[stylesheet-group="3"]{}
.r-105ug2t{pointer-events:auto!important;}
.r-10ptun7{height:16px;}
.r-10v3vxq{transform:scaleX(-1);}
.r-10x49cs{font-size:10px;}
.r-10xqauy{padding-top:env(safe-area-inset-top);}
.r-11j9u27{visibility:hidden;}
.r-11mpjr4{background-color:rgba(223,223,223,1.00);}
.r-11udlyb{background-color:rgba(0,150,136,1.00);}
.r-11yh6sk{overflow-x:hidden;}
.r-12vffkv>*{pointer-events:auto;}
.r-12vffkv{pointer-events:none!important;}
.r-13aq9py{animation-name:r-1iq689l;}
.r-13qz1uu{width:100%;}
.r-13tjlyg{transition-duration:0.1s;}
.r-1472mwg{height:24px;}
.r-14eup4l{top:3px;}
.r-14lw9ot{background-color:rgba(255,255,255,1.00);}
.r-14sbq61{background-color:rgba(33,150,243,1.00);}
.r-14yzgew{line-height:18px;}
.r-150rngu{-webkit-overflow-scrolling:touch;}
.r-15d164r{margin-bottom:10px;}
.r-16dba41{font-weight:400;}
.r-16y2uox{flex-grow:1;}
.r-173mn98{align-self:flex-end;}
.r-173mzie{transform:scaleY(-1);}
.r-1777fci{justify-content:center;}
.r-17bb2tj{animation-duration:0.75s;}
.r-17leim2{background-repeat:repeat;}
.r-17s6mgv{justify-content:flex-end;}
.r-18u1ve8{color:rgba(255,255,255,0.40);}
.r-18u37iz{flex-direction:row;}
.r-19h5ruw{margin-top:15px;}
.r-19qrga8{margin-top:3px;}
.r-19u6a5r{margin-left:12px;}
.r-19wmn03{width:20px;}
.r-19z077z{touch-action:none;}
.r-1a2p6p6{-webkit-text-decoration-style:solid;text-decoration-style:solid;}
.r-1abnn5w{animation-play-state:paused;}
.r-1acpoxo{width:36px;}
.r-1awozwy{align-items:center;}
.r-1ay1djp{animation-duration:1s;}
.r-1b43r93{font-size:14px;}
.r-1c6unfx{forced-color-adjust:none;}
.r-1cwl3u0{line-height:16px;}
.r-1d2f490{left:0px;}
.r-1d5kdc7{flex-direction:column-reverse;}
.r-1ddef8g{-webkit-text-decoration-line:underline;text-decoration-line:underline;}
.r-1dernwh{height:70%;}
.r-1ei5mc7{cursor:inherit;}
.r-1enofrn{font-size:12px;}
.r-1euagl{border-bottom-color:rgba(50,50,50,1.00);}
.r-1euycsn{flex-direction:row-reverse;}
.r-1ewcgjf{box-shadow:0px 1px 3px rgba(0,0,0,0.5);}
.r-1ff274t{text-align:right;}
.r-1g80hic{opacity:0.8;}
.r-1habvwh{align-items:flex-start;}
.r-1hfyk0a{padding-left:10px;}
.r-1i10wst{font-size:18px;}
.r-1i6wzkk{-moz-transition-property:opacity;-webkit-transition-property:opacity;transition-property:opacity;}
.r-1ielgck{animation-duration:300ms;}
.r-1iln25a{word-wrap:normal;}
.r-1inkyih{font-size:17px;}
.r-1iusvr4{flex-basis:0px;}
.r-1janqcz{width:16px;}
.r-1jkjb{margin-left:8px;}
.r-1joea0r{margin-left:20px;}
.r-1kfrs79{font-weight:600;}
.r-1kihuf0{align-self:center;}
.r-1ldzwu0{animation-timing-function:linear;}
.r-1loqt21{cursor:pointer;}
.r-1mi0q7o{padding-bottom:10px;}
.r-1mlwlqe{flex-basis:auto;}
.r-1mnahxq{margin-top:0px;}
.r-1mrlafo{background-position:0;}
.r-1muvv40{animation-iteration-count:infinite;}
.r-1niwhzg{background-color:rgba(0,0,0,0.00);}
.r-1nlw0im{bottom:8px;}
.r-1ny4l3l{outline-style:none;}
.r-1ocf4r9{scroll-snap-type:y mandatory;}
.r-1od2jal{font-weight:300;}
.r-1oszu61{align-items:stretch;}
.r-1otgn73{touch-action:manipulation;}
.r-1ozfoo7{margin-left:15px;}
.r-1p0dtai{bottom:0px;}
.r-1pexk7n{height:14px;}
.r-1pi2tsx{height:100%;}
.r-1pm8pkb{font-family:Courier;}
.r-1qd0xha{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;}
.r-1qulhi1{animation-name:r-1pzkwqh;}
.r-1r74h94{left:8px;}
.r-1r8g8re{height:36px;}
.r-1rnoaur{overflow-y:auto;}
.r-1rsjblm{include-font-padding:false;}
.r-1sg8ghl{z-index:1000;}
.r-1sxrcry{background-size:auto;}
.r-1udbk01{text-overflow:ellipsis;}
.r-1ui5ee8{font-size:32px;}
.r-1uxf3jb{min-width:25px;}
.r-1uypc71{animation-timing-function:ease-in;}
.r-1ve781c{top:7px;}
.r-1wbh5a2{flex-shrink:1;}
.r-1wrzk55{margin-left:-14.5px;}
.r-1wtj0ep{justify-content:space-between;}
.r-1wyyakw{z-index:-1;}
.r-1xcajam{position:fixed;}
.r-1xnzce8{-moz-user-select:-webkit-text;-moz-user-select:text;-webkit-user-select:-webkit-text;-webkit-user-select:text;user-select:-webkit-text;user-select:text;}
.r-1xzupcd{width:13px;}
.r-1yef0xd{animation-name:r-11cv4x;}
.r-2eszeu::-webkit-scrollbar{display:none}
.r-2eszeu{scrollbar-width:none;}
.r-30o5oe{-moz-appearance:none;-ms-appearance:none;-webkit-appearance:none;appearance:none;}
.r-356f0p{letter-spacing:0.35px;}
.r-3i2nvb{font-size:36px;}
.r-3s2u2q{white-space:nowrap;}
.r-417010{z-index:0;}
.r-4gszlv{background-size:cover;}
.r-4v7adb{height:5px;}
.r-5kkj8d{border-top-width:1px;}
.r-5zqcb5{color:rgba(255,255,255,0.70);}
.r-60vfwk{min-width:1px;}
.r-633pao{pointer-events:none!important;}
.r-6dt33c{opacity:1;}
.r-6gpygo{margin-bottom:12px;}
.r-6taxm2:-ms-input-placeholder{color:var(--placeholderTextColor);opacity:1;}
.r-6taxm2::-moz-placeholder{color:var(--placeholderTextColor);opacity:1;}
.r-6taxm2::-webkit-input-placeholder{color:var(--placeholderTextColor);opacity:1;}
.r-6taxm2::placeholder{color:var(--placeholderTextColor);opacity:1;}
.r-76blku{height:21px;}
.r-7cikom{font-size:inherit;}
.r-7q8q6z{cursor:default;}
.r-8akbws{-webkit-box-orient:vertical;}
.r-97e31f{padding-bottom:env(safe-area-inset-bottom);}
.r-adyw6z{font-size:20px;}
.r-agouwx{transform:translateZ(0);}
.r-ah5dr5>*{pointer-events:none;}
.r-ah5dr5{pointer-events:auto!important;}
.r-bi4vy9{transform:translateY(100%);}
.r-buy8e9{overflow-y:hidden;}
.r-bv2aro{padding-left:env(safe-area-inset-left);}
.r-c68hjy{color:rgba(161,161,161,1.00);}
.r-cpa5s6{scroll-snap-align:start;}
.r-cqee49{color:rgba(0,0,0,1.00);}
.r-d0pm55{margin-bottom:5px;}
.r-dkge59{background-color:rgba(170,184,194,1.00);}
.r-dnmrzs{max-width:100%;}
.r-eafdt9{transition-duration:0.15s;}
.r-ebwn4k{animation-name:r-q67da2;}
.r-ehq7j7{background-size:contain;}
.r-eqz5dr{flex-direction:column;}
.r-fdjqy7{text-align:left;}
.r-g3mlsw{animation-name:r-t2lo5v;}
.r-ghxds0{transform:translateY(0%);}
.r-gtdqiz{position:-webkit-sticky;position:sticky;}
.r-hxflta{padding-right:env(safe-area-inset-right);}
.r-icoktb{opacity:0.5;}
.r-ipm5af{top:0px;}
.r-jwli3a{color:rgba(255,255,255,1.00);}
.r-k200y{align-self:flex-start;}
.r-kemksi{background-color:rgba(0,0,0,1.00);}
.r-kpc20e{color:rgba(255,255,255,0.80);}
.r-kzbkwu{padding-bottom:12px;}
.r-l4djrs{left:3px;}
.r-lltvgl{overflow-x:auto;}
.r-lrsllp{width:24px;}
.r-lrvibr{-moz-user-select:none;-webkit-user-select:none;user-select:none;}
.r-majxgm{font-weight:500;}
.r-mfh4gg{scroll-snap-type:x mandatory;}
.r-mhe3cw{z-index:10;}
.r-n6v787{font-size:13px;}
.r-nvplwv{animation-timing-function:ease-out;}
.r-nygpdh{transform:scaleX(1);}
.r-obd0qt{align-items:flex-end;}
.r-orgf3d{opacity:0;}
.r-q4m81j{text-align:center;}
.r-qfi6ny{top:30000px;}
.r-qklmqi{border-bottom-width:1px;}
.r-r5vmyo{z-index:1002;}
.r-rjixqe{line-height:20px;}
.r-rs94m5{background-image:url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+CjxzdmcKICAgeG1sbnM6ZGM9Imh0dHA6Ly9wdXJsLm9yZy9kYy9lbGVtZW50cy8xLjEvIgogICB4bWxuczpjYz0iaHR0cDovL2NyZWF0aXZlY29tbW9ucy5vcmcvbnMjIgogICB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiCiAgIHhtbG5zOnN2Zz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCiAgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIKICAgdmVyc2lvbj0iMS4xIgogICB2aWV3Qm94PSIwIDAgMSAxIgogICBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJ4TWluWU1pbiBtZWV0Ij4KICA8cGF0aAogICAgIGQ9Ik0gMC4wNDAzODA1OSwwLjYyNjc3NjcgMC4xNDY0NDY2MSwwLjUyMDcxMDY4IDAuNDI5Mjg5MzIsMC44MDM1NTMzOSAwLjMyMzIyMzMsMC45MDk2MTk0MSB6IE0gMC4yMTcxNTcyOSwwLjgwMzU1MzM5IDAuODUzNTUzMzksMC4xNjcxNTcyOSAwLjk1OTYxOTQxLDAuMjczMjIzMyAwLjMyMzIyMzMsMC45MDk2MTk0MSB6IgogICAgIGlkPSJyZWN0Mzc4MCIKICAgICBzdHlsZT0iZmlsbDojZmZmZmZmO2ZpbGwtb3BhY2l0eToxO3N0cm9rZTpub25lIiAvPgo8L3N2Zz4K");}
.r-sfbmgh{z-index:9999;}
.r-tsynxw{text-transform:uppercase;}
.r-u6sd8q{background-repeat:no-repeat;}
.r-u8s1d{position:absolute;}
.r-u92y06{background-color:rgba(255,165,0,1.00);}
.r-ubezar{font-size:16px;}
.r-van48c{caret-color:transparent;}
.r-vvn4in{background-position:center;}
.r-vw2c0b{font-weight:bold;}
.r-wfqgy4{transition-duration:100ms;}
.r-x3cy2q{background-size:100% 100%;}
.r-xx3c9p{animation-name:r-imtty0;}
.r-yie26v{z-index:1001;}
.r-z80fyv{height:20px;}
.r-zchlnj{right:0px;}
@-webkit-keyframes r-11cv4x{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
@-webkit-keyframes r-1iq689l{0%{transform:translateY(0%);}100%{transform:translateY(100%);}}
@-webkit-keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
@-webkit-keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
@-webkit-keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
@-webkit-keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}
@keyframes r-11cv4x{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
@keyframes r-1iq689l{0%{transform:translateY(0%);}100%{transform:translateY(100%);}}
@keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
@keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
@keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style></head><body><div id="root"><div class="css-175oi2r" style="flex:1"><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r" style="flex:1;padding-top:0px;padding-right:0px;padding-bottom:0px;padding-left:0px"><div dir="auto" class="css-146c3p1">Index</div></div></div></div></div><script src="/_expo/static/js/web/[mock].js" defer></script>
</body></html>"
`;

exports[`exports with nested static head 1`] = `
"<!DOCTYPE html><html  lang="en"><head><title data-rh="true">About | Website</title><meta data-rh="true" name="fake" content="bar"/><meta data-rh="true" name="description" content="About page"/><meta charSet="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1.00001,viewport-fit=cover"/><style id="expo-reset">#root,body{display:flex}#root,body,html{width:100%;-webkit-overflow-scrolling:touch;margin:0;padding:0;min-height:100%}#root{flex-shrink:0;flex-basis:auto;flex-grow:1;flex:1}html{scroll-behavior:smooth;-webkit-text-size-adjust:100%;height:calc(100% + env(safe-area-inset-top))}body{overflow-y:auto;overscroll-behavior-y:none;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;-ms-overflow-style:scrollbar}</style><style id="react-native-stylesheet">[stylesheet-group="0"]{}
body{margin:0;}
button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:rgba(0,0,0,0);}
input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-webkit-search-results-button,input::-webkit-search-results-decoration{display:none;}
[stylesheet-group="1"]{}
.css-11aywtz{-moz-appearance:textfield;-webkit-appearance:none;background-color:rgba(0,0,0,0.00);border-bottom-left-radius:0px;border-bottom-right-radius:0px;border-top-left-radius:0px;border-top-right-radius:0px;border:0 solid black;box-sizing:border-box;font:14px -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;margin:0px;padding:0px;resize:none;}
.css-146c3p1{background-color:rgba(0,0,0,0.00);border:0 solid black;box-sizing:border-box;color:rgba(0,0,0,1.00);display:inline;font:14px -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;list-style:none;margin:0px;padding:0px;position:relative;text-align:start;text-decoration:none;white-space:pre-wrap;word-wrap:break-word;}
.css-175oi2r{align-items:stretch;background-color:rgba(0,0,0,0.00);border:0 solid black;box-sizing:border-box;display:flex;flex-basis:auto;flex-direction:column;flex-shrink:0;list-style:none;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;text-decoration:none;z-index:0;}
.css-1jxf684{background-color:rgba(0,0,0,0.00);border:0 solid black;box-sizing:border-box;color:inherit;display:inline;font:inherit;list-style:none;margin:0px;padding:0px;position:relative;text-align:inherit;text-decoration:none;white-space:inherit;word-wrap:break-word;}
.css-9pa8cd{bottom:0px;height:100%;left:0px;opacity:0;position:absolute;right:0px;top:0px;width:100%;z-index:-1;}
[stylesheet-group="2"]{}
.r-11mg6pl{border-bottom-color:rgba(255,255,255,1.00);border-left-color:rgba(255,255,255,1.00);border-right-color:rgba(255,255,255,1.00);border-top-color:rgba(255,255,255,1.00);}
.r-13awgt0{flex:1;}
.r-1a976y8{border-bottom-left-radius:19px;border-bottom-right-radius:19px;border-top-left-radius:19px;border-top-right-radius:19px;}
.r-1awa8pu{border-bottom-color:rgba(101,119,134,1.00);border-left-color:rgba(101,119,134,1.00);border-right-color:rgba(101,119,134,1.00);border-top-color:rgba(101,119,134,1.00);}
.r-1bq2mok{margin:3px;}
.r-1d4xg89{border-bottom-color:rgba(170,184,194,1.00);border-left-color:rgba(170,184,194,1.00);border-right-color:rgba(170,184,194,1.00);border-top-color:rgba(170,184,194,1.00);}
.r-1f0042m{border-bottom-left-radius:5px;border-bottom-right-radius:5px;border-top-left-radius:5px;border-top-right-radius:5px;}
.r-1j16mh1{border-bottom-left-radius:100%;border-bottom-right-radius:100%;border-top-left-radius:100%;border-top-right-radius:100%;}
.r-1jkafct{border-bottom-left-radius:2px;border-bottom-right-radius:2px;border-top-left-radius:2px;border-top-right-radius:2px;}
.r-1jyn79y{border-bottom-color:rgba(0,150,136,1.00);border-left-color:rgba(0,150,136,1.00);border-right-color:rgba(0,150,136,1.00);border-top-color:rgba(0,150,136,1.00);}
.r-1phboty{border-bottom-style:solid;border-left-style:solid;border-right-style:solid;border-top-style:solid;}
.r-1q9bdsx{border-bottom-left-radius:12px;border-bottom-right-radius:12px;border-top-left-radius:12px;border-top-right-radius:12px;}
.r-1rvyss1{border-bottom-color:rgba(255,255,255,0.20);border-left-color:rgba(255,255,255,0.20);border-right-color:rgba(255,255,255,0.20);border-top-color:rgba(255,255,255,0.20);}
.r-1udh08x{overflow-x:hidden;overflow-y:hidden;}
.r-4a18lf{border-bottom-color:rgba(255,0,0,1.00);border-left-color:rgba(255,0,0,1.00);border-right-color:rgba(255,0,0,1.00);border-top-color:rgba(255,0,0,1.00);}
.r-60ke3l{border-bottom-color:rgba(0,128,0,1.00);border-left-color:rgba(0,128,0,1.00);border-right-color:rgba(0,128,0,1.00);border-top-color:rgba(0,128,0,1.00);}
.r-6koalj{display:flex;}
.r-9x6qib{border-bottom-color:rgba(204,214,221,1.00);border-left-color:rgba(204,214,221,1.00);border-right-color:rgba(204,214,221,1.00);border-top-color:rgba(204,214,221,1.00);}
.r-crgep1{margin:0px;}
.r-d045u9{border-bottom-width:2px;border-left-width:2px;border-right-width:2px;border-top-width:2px;}
.r-d23pfw{padding:24px;}
.r-edyy15{padding:8px;}
.r-fx7oqy{border-bottom-color:rgba(0,0,255,1.00);border-left-color:rgba(0,0,255,1.00);border-right-color:rgba(0,0,255,1.00);border-top-color:rgba(0,0,255,1.00);}
.r-krxsd3{display:-webkit-box;}
.r-kshhro{border-bottom-color:rgba(50,50,50,1.00);border-left-color:rgba(50,50,50,1.00);border-right-color:rgba(50,50,50,1.00);border-top-color:rgba(50,50,50,1.00);}
.r-rs99b7{border-bottom-width:1px;border-left-width:1px;border-right-width:1px;border-top-width:1px;}
.r-t60dpp{padding:0px;}
.r-xoduu5{display:inline-flex;}
.r-ywje51{margin:auto;}
.r-z2wwpe{border-bottom-left-radius:4px;border-bottom-right-radius:4px;border-top-left-radius:4px;border-top-right-radius:4px;}
[stylesheet-group="2.1"]{}
.r-11f147o{padding-bottom:8px;padding-top:8px;}
.r-184id4b{margin-bottom:12px;margin-top:12px;}
.r-1mmae3n{padding-bottom:12px;padding-top:12px;}
.r-1ntr0p{padding-left:5px;padding-right:5px;}
.r-1ubuhtd{padding-left:10px;padding-right:10px;}
.r-1xpp3t0{margin-left:16px;margin-right:16px;}
.r-3o4zer{padding-left:12px;padding-right:12px;}
.r-cnw61z{padding-bottom:4px;padding-top:4px;}
.r-cxgwc0{padding-left:24px;padding-right:24px;}
.r-f8sm7e{margin-left:auto;margin-right:auto;}
.r-is05cd{padding-left:8px;padding-right:8px;}
.r-jdiy1a{margin-left:11px;margin-right:11px;}
.r-lcslpx{margin-left:10px;margin-right:10px;}
.r-n5f61p{margin-bottom:3px;margin-top:3px;}
.r-n7gxbd{padding-left:4px;padding-right:4px;}
.r-rehuqn{padding-bottom:5px;padding-top:5px;}
.r-t15j4v{padding-left:27px;padding-right:27px;}
.r-ubg91z{padding-left:15px;padding-right:15px;}
.r-w7s2jr{padding-bottom:16px;padding-top:16px;}
.r-ytbthy{padding-bottom:10px;padding-top:10px;}
[stylesheet-group="2.2"]{}
.r-10s2tm5{left:0%;}
.r-16o8guy{right:100%;}
.r-1ez5h0i{margin-left:4px;}
.r-1gs4q39{margin-right:4px;}
.r-dqe1q{right:0%;}
.r-rci37q{left:100%;}
[stylesheet-group="3"]{}
.r-105ug2t{pointer-events:auto!important;}
.r-10ptun7{height:16px;}
.r-10v3vxq{transform:scaleX(-1);}
.r-10x49cs{font-size:10px;}
.r-10xqauy{padding-top:env(safe-area-inset-top);}
.r-11j9u27{visibility:hidden;}
.r-11mpjr4{background-color:rgba(223,223,223,1.00);}
.r-11udlyb{background-color:rgba(0,150,136,1.00);}
.r-11yh6sk{overflow-x:hidden;}
.r-12vffkv>*{pointer-events:auto;}
.r-12vffkv{pointer-events:none!important;}
.r-13aq9py{animation-name:r-1iq689l;}
.r-13qz1uu{width:100%;}
.r-13tjlyg{transition-duration:0.1s;}
.r-1472mwg{height:24px;}
.r-14eup4l{top:3px;}
.r-14lw9ot{background-color:rgba(255,255,255,1.00);}
.r-14sbq61{background-color:rgba(33,150,243,1.00);}
.r-14yzgew{line-height:18px;}
.r-150rngu{-webkit-overflow-scrolling:touch;}
.r-15d164r{margin-bottom:10px;}
.r-16dba41{font-weight:400;}
.r-16y2uox{flex-grow:1;}
.r-173mn98{align-self:flex-end;}
.r-173mzie{transform:scaleY(-1);}
.r-1777fci{justify-content:center;}
.r-17bb2tj{animation-duration:0.75s;}
.r-17leim2{background-repeat:repeat;}
.r-17s6mgv{justify-content:flex-end;}
.r-18u1ve8{color:rgba(255,255,255,0.40);}
.r-18u37iz{flex-direction:row;}
.r-19h5ruw{margin-top:15px;}
.r-19qrga8{margin-top:3px;}
.r-19u6a5r{margin-left:12px;}
.r-19wmn03{width:20px;}
.r-19z077z{touch-action:none;}
.r-1a2p6p6{-webkit-text-decoration-style:solid;text-decoration-style:solid;}
.r-1abnn5w{animation-play-state:paused;}
.r-1acpoxo{width:36px;}
.r-1awozwy{align-items:center;}
.r-1ay1djp{animation-duration:1s;}
.r-1b43r93{font-size:14px;}
.r-1c6unfx{forced-color-adjust:none;}
.r-1cwl3u0{line-height:16px;}
.r-1d2f490{left:0px;}
.r-1d5kdc7{flex-direction:column-reverse;}
.r-1ddef8g{-webkit-text-decoration-line:underline;text-decoration-line:underline;}
.r-1dernwh{height:70%;}
.r-1ei5mc7{cursor:inherit;}
.r-1enofrn{font-size:12px;}
.r-1euagl{border-bottom-color:rgba(50,50,50,1.00);}
.r-1euycsn{flex-direction:row-reverse;}
.r-1ewcgjf{box-shadow:0px 1px 3px rgba(0,0,0,0.5);}
.r-1ff274t{text-align:right;}
.r-1g80hic{opacity:0.8;}
.r-1habvwh{align-items:flex-start;}
.r-1hfyk0a{padding-left:10px;}
.r-1i10wst{font-size:18px;}
.r-1i6wzkk{-moz-transition-property:opacity;-webkit-transition-property:opacity;transition-property:opacity;}
.r-1ielgck{animation-duration:300ms;}
.r-1iln25a{word-wrap:normal;}
.r-1inkyih{font-size:17px;}
.r-1iusvr4{flex-basis:0px;}
.r-1janqcz{width:16px;}
.r-1jkjb{margin-left:8px;}
.r-1joea0r{margin-left:20px;}
.r-1kfrs79{font-weight:600;}
.r-1kihuf0{align-self:center;}
.r-1ldzwu0{animation-timing-function:linear;}
.r-1loqt21{cursor:pointer;}
.r-1mi0q7o{padding-bottom:10px;}
.r-1mlwlqe{flex-basis:auto;}
.r-1mnahxq{margin-top:0px;}
.r-1mrlafo{background-position:0;}
.r-1muvv40{animation-iteration-count:infinite;}
.r-1niwhzg{background-color:rgba(0,0,0,0.00);}
.r-1nlw0im{bottom:8px;}
.r-1ny4l3l{outline-style:none;}
.r-1ocf4r9{scroll-snap-type:y mandatory;}
.r-1od2jal{font-weight:300;}
.r-1oszu61{align-items:stretch;}
.r-1otgn73{touch-action:manipulation;}
.r-1ozfoo7{margin-left:15px;}
.r-1p0dtai{bottom:0px;}
.r-1pexk7n{height:14px;}
.r-1pi2tsx{height:100%;}
.r-1pm8pkb{font-family:Courier;}
.r-1qd0xha{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;}
.r-1qulhi1{animation-name:r-1pzkwqh;}
.r-1r74h94{left:8px;}
.r-1r8g8re{height:36px;}
.r-1rnoaur{overflow-y:auto;}
.r-1rsjblm{include-font-padding:false;}
.r-1sg8ghl{z-index:1000;}
.r-1sxrcry{background-size:auto;}
.r-1udbk01{text-overflow:ellipsis;}
.r-1ui5ee8{font-size:32px;}
.r-1uxf3jb{min-width:25px;}
.r-1uypc71{animation-timing-function:ease-in;}
.r-1ve781c{top:7px;}
.r-1wbh5a2{flex-shrink:1;}
.r-1wrzk55{margin-left:-14.5px;}
.r-1wtj0ep{justify-content:space-between;}
.r-1wyyakw{z-index:-1;}
.r-1xcajam{position:fixed;}
.r-1xnzce8{-moz-user-select:-webkit-text;-moz-user-select:text;-webkit-user-select:-webkit-text;-webkit-user-select:text;user-select:-webkit-text;user-select:text;}
.r-1xzupcd{width:13px;}
.r-1yef0xd{animation-name:r-11cv4x;}
.r-2eszeu::-webkit-scrollbar{display:none}
.r-2eszeu{scrollbar-width:none;}
.r-30o5oe{-moz-appearance:none;-ms-appearance:none;-webkit-appearance:none;appearance:none;}
.r-356f0p{letter-spacing:0.35px;}
.r-3i2nvb{font-size:36px;}
.r-3s2u2q{white-space:nowrap;}
.r-417010{z-index:0;}
.r-4gszlv{background-size:cover;}
.r-4v7adb{height:5px;}
.r-5kkj8d{border-top-width:1px;}
.r-5zqcb5{color:rgba(255,255,255,0.70);}
.r-60vfwk{min-width:1px;}
.r-633pao{pointer-events:none!important;}
.r-6dt33c{opacity:1;}
.r-6gpygo{margin-bottom:12px;}
.r-6taxm2:-ms-input-placeholder{color:var(--placeholderTextColor);opacity:1;}
.r-6taxm2::-moz-placeholder{color:var(--placeholderTextColor);opacity:1;}
.r-6taxm2::-webkit-input-placeholder{color:var(--placeholderTextColor);opacity:1;}
.r-6taxm2::placeholder{color:var(--placeholderTextColor);opacity:1;}
.r-76blku{height:21px;}
.r-7cikom{font-size:inherit;}
.r-7q8q6z{cursor:default;}
.r-8akbws{-webkit-box-orient:vertical;}
.r-97e31f{padding-bottom:env(safe-area-inset-bottom);}
.r-adyw6z{font-size:20px;}
.r-agouwx{transform:translateZ(0);}
.r-ah5dr5>*{pointer-events:none;}
.r-ah5dr5{pointer-events:auto!important;}
.r-bi4vy9{transform:translateY(100%);}
.r-buy8e9{overflow-y:hidden;}
.r-bv2aro{padding-left:env(safe-area-inset-left);}
.r-c68hjy{color:rgba(161,161,161,1.00);}
.r-cpa5s6{scroll-snap-align:start;}
.r-cqee49{color:rgba(0,0,0,1.00);}
.r-d0pm55{margin-bottom:5px;}
.r-dkge59{background-color:rgba(170,184,194,1.00);}
.r-dnmrzs{max-width:100%;}
.r-eafdt9{transition-duration:0.15s;}
.r-ebwn4k{animation-name:r-q67da2;}
.r-ehq7j7{background-size:contain;}
.r-eqz5dr{flex-direction:column;}
.r-fdjqy7{text-align:left;}
.r-g3mlsw{animation-name:r-t2lo5v;}
.r-ghxds0{transform:translateY(0%);}
.r-gtdqiz{position:-webkit-sticky;position:sticky;}
.r-hxflta{padding-right:env(safe-area-inset-right);}
.r-icoktb{opacity:0.5;}
.r-ipm5af{top:0px;}
.r-jwli3a{color:rgba(255,255,255,1.00);}
.r-k200y{align-self:flex-start;}
.r-kemksi{background-color:rgba(0,0,0,1.00);}
.r-kpc20e{color:rgba(255,255,255,0.80);}
.r-kzbkwu{padding-bottom:12px;}
.r-l4djrs{left:3px;}
.r-lltvgl{overflow-x:auto;}
.r-lrsllp{width:24px;}
.r-lrvibr{-moz-user-select:none;-webkit-user-select:none;user-select:none;}
.r-majxgm{font-weight:500;}
.r-mfh4gg{scroll-snap-type:x mandatory;}
.r-mhe3cw{z-index:10;}
.r-n6v787{font-size:13px;}
.r-nvplwv{animation-timing-function:ease-out;}
.r-nygpdh{transform:scaleX(1);}
.r-obd0qt{align-items:flex-end;}
.r-orgf3d{opacity:0;}
.r-q4m81j{text-align:center;}
.r-qfi6ny{top:30000px;}
.r-qklmqi{border-bottom-width:1px;}
.r-r5vmyo{z-index:1002;}
.r-rjixqe{line-height:20px;}
.r-rs94m5{background-image:url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+CjxzdmcKICAgeG1sbnM6ZGM9Imh0dHA6Ly9wdXJsLm9yZy9kYy9lbGVtZW50cy8xLjEvIgogICB4bWxuczpjYz0iaHR0cDovL2NyZWF0aXZlY29tbW9ucy5vcmcvbnMjIgogICB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiCiAgIHhtbG5zOnN2Zz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCiAgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIKICAgdmVyc2lvbj0iMS4xIgogICB2aWV3Qm94PSIwIDAgMSAxIgogICBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJ4TWluWU1pbiBtZWV0Ij4KICA8cGF0aAogICAgIGQ9Ik0gMC4wNDAzODA1OSwwLjYyNjc3NjcgMC4xNDY0NDY2MSwwLjUyMDcxMDY4IDAuNDI5Mjg5MzIsMC44MDM1NTMzOSAwLjMyMzIyMzMsMC45MDk2MTk0MSB6IE0gMC4yMTcxNTcyOSwwLjgwMzU1MzM5IDAuODUzNTUzMzksMC4xNjcxNTcyOSAwLjk1OTYxOTQxLDAuMjczMjIzMyAwLjMyMzIyMzMsMC45MDk2MTk0MSB6IgogICAgIGlkPSJyZWN0Mzc4MCIKICAgICBzdHlsZT0iZmlsbDojZmZmZmZmO2ZpbGwtb3BhY2l0eToxO3N0cm9rZTpub25lIiAvPgo8L3N2Zz4K");}
.r-sfbmgh{z-index:9999;}
.r-tsynxw{text-transform:uppercase;}
.r-u6sd8q{background-repeat:no-repeat;}
.r-u8s1d{position:absolute;}
.r-u92y06{background-color:rgba(255,165,0,1.00);}
.r-ubezar{font-size:16px;}
.r-van48c{caret-color:transparent;}
.r-vvn4in{background-position:center;}
.r-vw2c0b{font-weight:bold;}
.r-wfqgy4{transition-duration:100ms;}
.r-x3cy2q{background-size:100% 100%;}
.r-xx3c9p{animation-name:r-imtty0;}
.r-yie26v{z-index:1001;}
.r-z80fyv{height:20px;}
.r-zchlnj{right:0px;}
@-webkit-keyframes r-11cv4x{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
@-webkit-keyframes r-1iq689l{0%{transform:translateY(0%);}100%{transform:translateY(100%);}}
@-webkit-keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
@-webkit-keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
@-webkit-keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
@-webkit-keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}
@keyframes r-11cv4x{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
@keyframes r-1iq689l{0%{transform:translateY(0%);}100%{transform:translateY(100%);}}
@keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
@keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
@keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style></head><body><div id="root"><div class="css-175oi2r" style="flex:1"><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0 r-1d5kdc7 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(242,242,242,1.00);display:flex"><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0"><div dir="auto" class="css-146c3p1" data-testid="content">About</div></div></div><div class="css-175oi2r"><div class="css-175oi2r r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-12vffkv" style="z-index:0"><div class="css-175oi2r r-qklmqi r-13awgt0" style="box-shadow:0px 0px 0px rgba(216,216,216,1.00);background-color:rgba(255,255,255,1.00);border-bottom-color:rgba(216,216,216,1.00)"></div></div><div class="css-175oi2r r-12vffkv" style="height:64px"><div class="css-175oi2r r-633pao" style="height:0px"></div><div class="css-175oi2r r-1oszu61 r-13awgt0 r-18u37iz r-12vffkv"><div class="css-175oi2r r-1habvwh r-1777fci r-12vffkv" style="margin-left:0px"></div><div class="css-175oi2r r-1777fci r-1xpp3t0 r-12vffkv" style="max-width:-32px"><h1 dir="auto" aria-level="1" role="heading" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-1i10wst r-majxgm" style="color:rgba(28,28,30,1.00)">about</h1></div><div class="css-175oi2r r-obd0qt r-1777fci r-1iusvr4 r-16y2uox r-12vffkv" style="margin-right:0px"></div></div></div></div></div></div></div></div></div></div><script src="/_expo/static/js/web/[mock].js" defer></script>
</body></html>"
`;
